add job descriptions

--- a/resume.html
+++ b/resume.html
@@ -103,15 +103,54 @@
                     <div class="timeline-item" data-dates="03/2021 - Current">
                         <h3>Kahn Design - Bradford</h3>
                         <h4>Product Manager</h4>
-                        <p></p>
+                        <p>My current role at Kahn Design has provided me an excellent opportunity to develop my
+                            experience maintaining an E-Commerce website through the Shopify platform, as well as
+                            further my knowledge in product development and deployment.
+                            Key Responsibilities:</p>
+                        <ul>
+                            <li>Maintaining product listings on the E-Commerce website via Shopify.</li>
+                            <li>Working with supply chain and marketing to assist in new product releases.</li>
+                            <li>Product knowledge and development duties.</li>
+                            <li>Inventory movement report analysis.</li>
+                            <li>Monitoring aging stock lines and developing end of line strategies.</li>
+                        </ul>
                     </div>
                     <div class="timeline-item" data-dates="03/2020 - 03/2021">
-                        <h4>LTE Scientific LTD - Oldham</h4>
-                        <p>Purchasing Manager</p>
+                        <h3>LTE Scientific LTD - Oldham</h3>
+                        <h4>Purchasing Manager</h4>
+                        <p>My role as Purchasing Manager gave me the opportunity to utilise and expand my skills and
+                            experience in Supply Chain and Procurement Management for an extremely busy and demanding
+                            manufacturing business.
+                            Key Responsibilities:
+                        </p>
+                        <ul>
+                            <li>Effective management of stores and purchasing personnel</li>
+                            <li>Managing and maintaining stock levels through the MRP system to ensure the needs of the
+                                business are met.</li>
+                            <li>Assessing and resolving Quality Control issues through the internal Quality System.</li>
+                            <li>Managing supplier relationships, negotiating pricing structures and sourcing new
+                                suppliers.</li>
+                            <li>Monitoring and managing KPI’s and Audit standards.</li>
+                            <li>Reviewing stock usage trends and stock forecasting in-line with
+                                company requirements
+                            </li>
+                            <li>Liaise with Production and Technical departments with order updates and requirements.
+                            </li>
+                        </ul>
                     </div>
                     <div class="timeline-item" data-dates="01/2017 - 02/2020">
-                        <h4>Tesla Motors - Stockport</h4>
-                        <p>Parts and Logistics Coordinator</p>
+                        <h3>Tesla Motors - Stockport</h3>
+                        <h4>Parts and Logistics Coordinator</h4>
+                        <p>Key Responsibilities:</p>
+                        <li>Managerial duties including new starter training including travelling to new sites and assisting with departmental structuring.</li>
+                        <li>Monitoring outbound stock orders and updating various areas of the business to ensure lead times are met.</li>
+                        <li>Optimise stock routing according to ABC analysis.</li>
+                        <li>Inventory management/planning including distribution planning.</li>
+                        <li>Analysing usage trends for stock forecasting responsibilities.</li>
+                        <li>Monitoring and managing KPI’s and Audit standards. </li>
+                        <li>Daily stock takes and carrying out inventory transaction reports when required, including full inventory audits.</li>
+                        <li>Implementing a new pre-diagnosis procedure to improve parts pre-ordering.</li>
+                        <li>Introducing a new stock location system and overseeing a complete refurbishment of the parts department.</li>
                     </div>
                 </div>
                 <div class="row progress-section">
