--- a/resume.html
+++ b/resume.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" type="text/css" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+        integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css"
+        integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css"
+        type="text/css" />
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Andrew Linehan - CV</title>
 </head>
+
 <body>
     <header>
         <div class="row no-gutters">
-            <a class="col-md-4 logo" href="02-index.html"></a>
+            <a class="col-md-4 logo" href=""></a>
             <div class="col-md-8">
                 <div class="row no-gutters bg-color-name-title">
                     <div class="col heading">
@@ -48,7 +53,45 @@
     </header>
     <section class="container-fluid">
         <div class="row">
-            <div class="col-md-4 bg-color-work-history section-column">
+            <div class="col-md-4 bg-color-work-history section-column text-white">
+                <div class="row">
+                    <div class="col">
+                        <h3 class="section-heading uppercase">My Skills</h3>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="three-reasons-icon fa fa-tv" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">Front End</h4>
+                                <p>
+                                    I'm skilled in User Experience Design using the trinity of HTML/CSS/Javascript. I
+                                    also have extensive experience in Front End Frameworks such as Angular and React
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="three-reasons-icon fas fa-cogs" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">Back End</h4>
+                                <p>
+                                    I specialize in data-driven web applications. Many of my projects utilise
+                                    document-based data. I use Python and Django in conjunction with MongoDB to process
+                                    and present information.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-8 bg-color-three-reasons section-column">
                 <div class="row">
                     <div class="col-12">
                         <h3 class="history-heading uppercase">
@@ -57,87 +100,93 @@
                     </div>
                 </div>
                 <div class="history-items">
-                    <div class="timeline-item" data-dates="02/1998 - 04/2004">
-                        <h4>National College of Art and Design (NCAD)</h4>
-                        <p>Sculptor in residence</p>
+                    <div class="timeline-item" data-dates="03/2021 - Current">
+                        <h3>Kahn Design - Bradford</h3>
+                        <h4>Product Manager</h4>
+                        <p>My current role at Kahn Design has provided me an excellent opportunity to develop my
+                            experience maintaining an E-Commerce website through the Shopify platform, as well as
+                            further my knowledge in product development and deployment.
+                            Key Responsibilities:</p>
+                        <ul>
+                            <li>Maintaining product listings on the E-Commerce website via Shopify.</li>
+                            <li>Working with supply chain and marketing to assist in new product releases.</li>
+                            <li>Product knowledge and development duties.</li>
+                            <li>Inventory movement report analysis.</li>
+                            <li>Monitoring aging stock lines and developing end of line strategies.</li>
+                        </ul>
                     </div>
-                    <div class="timeline-item" data-dates="04/2004 - 06/2008">
-                        <h4>Fisher and Diaz Funeral Directors</h4>
-                        <p>Junior Embalmer</p>
+                    <div class="timeline-item" data-dates="03/2020 - 03/2021">
+                        <h3>LTE Scientific LTD - Oldham</h3>
+                        <h4>Purchasing Manager</h4>
+                        <p>My role as Purchasing Manager gave me the opportunity to utilise and expand my skills and
+                            experience in Supply Chain and Procurement Management for an extremely busy and demanding
+                            manufacturing business.
+                            Key Responsibilities:
+                        </p>
+                        <ul>
+                            <li>Effective management of stores and purchasing personnel</li>
+                            <li>Managing and maintaining stock levels through the MRP system to ensure the needs of the
+                                business are met.</li>
+                            <li>Assessing and resolving Quality Control issues through the internal Quality System.</li>
+                            <li>Managing supplier relationships, negotiating pricing structures and sourcing new
+                                suppliers.</li>
+                            <li>Monitoring and managing KPI’s and Audit standards.</li>
+                            <li>Reviewing stock usage trends and stock forecasting in-line with
+                                company requirements
+                            </li>
+                            <li>Liaise with Production and Technical departments with order updates and requirements.
+                            </li>
+                        </ul>
                     </div>
-                    <div class="timeline-item" data-dates="06/2008 - 06/2011">
-                        <h4>Phantom Design Inc. Dublin</h4>
-                        <p>Junior Front End Developer</p>
-                    </div>
-                    <div class="timeline-item" data-dates="06/2011 - Present">
-                        <h4>Hooli Inc. Silicon Valley</h4>
-                        <p>Full Stack Web Developer</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-8 bg-color-three-reasons section-column">
-                <div class="row">
-                    <div class="col">
-                        <h3 class="section-heading uppercase">My Skills</h3>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
-                        <div class="row">
-                            <div class="col-2">
-                                <i class="three-reasons-icon fa fa-tv" aria-hidden="true"></i>
-                            </div>
-                            <div class="col-10">
-                                <h4 class="three-reasons-heading uppercase">Front End</h4>
-                                <p>
-                                    I'm skilled in User Experience Design using the trinity of HTML/CSS/Javascript. I also have extensive experience in Front End Frameworks such as Angular and React
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
-                        <div class="row">
-                            <div class="col-2">
-                                <i class="three-reasons-icon fa fa-gears" aria-hidden="true"></i>
-                            </div>
-                            <div class="col-10">
-                                <h4 class="three-reasons-heading uppercase">Back End</h4>
-                                <p>
-                                    I specialize in data-driven web applications. Many of my projects utilise document-based data. I use Python and Django in conjunction with MongoDB to process and present information.
-                                </p>
-                            </div>
-                        </div>
+                    <div class="timeline-item" data-dates="01/2017 - 02/2020">
+                        <h3>Tesla Motors - Stockport</h3>
+                        <h4>Parts and Logistics Coordinator</h4>
+                        <p>Key Responsibilities:</p>
+                        <li>Managerial duties including new starter training including travelling to new sites and assisting with departmental structuring.</li>
+                        <li>Monitoring outbound stock orders and updating various areas of the business to ensure lead times are met.</li>
+                        <li>Optimise stock routing according to ABC analysis.</li>
+                        <li>Inventory management/planning including distribution planning.</li>
+                        <li>Analysing usage trends for stock forecasting responsibilities.</li>
+                        <li>Monitoring and managing KPI’s and Audit standards. </li>
+                        <li>Daily stock takes and carrying out inventory transaction reports when required, including full inventory audits.</li>
+                        <li>Implementing a new pre-diagnosis procedure to improve parts pre-ordering.</li>
+                        <li>Introducing a new stock location system and overseeing a complete refurbishment of the parts department.</li>
                     </div>
                 </div>
                 <div class="row progress-section">
                     <div class="col">
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%;">
-                                <span class="sr-only">90% complete</span>
+                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0"
+                                aria-valuemax="100" style="width:80%;">
+                                <span class="sr-only">80% complete</span>
                             </div>
                             <span class="progress-type">HTML / HTML5</span>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%;">
+                            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="80" aria-valuemin="0"
+                                aria-valuemax="100" style="width:80%;">
                                 <span class="sr-only">80% complete</span>
                             </div>
                             <span class="progress-type">CSS / CSS3</span>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar bg-info" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%;">
-                                <span class="sr-only">70% complete</span>
+                            <div class="progress-bar bg-info" role="progressbar" aria-valuenow="70" aria-valuemin="0"
+                                aria-valuemax="100" style="width:50%;">
+                                <span class="sr-only">50% complete</span>
                             </div>
-                            <span class="progress-type">JavaScript / jQuery</span>
+                            <span class="progress-type">JavaScript / jQuery / ReactJS</span>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%;">
-                                <span class="sr-only">80% complete</span>
+                            <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="80" aria-valuemin="0"
+                                aria-valuemax="100" style="width:40%;">
+                                <span class="sr-only">40% complete</span>
                             </div>
                             <span class="progress-type">Django / Python</span>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%;">
-                                <span class="sr-only">80% complete</span>
+                            <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0"
+                                aria-valuemax="100" style="width:40%;">
+                                <span class="sr-only">40% complete</span>
                             </div>
                             <span class="progress-type">SQL / NoSQL</span>
                         </div>
@@ -145,14 +194,15 @@
                 </div>
             </div>
         </div>
-        
+
     </section>
     <footer class="container-fluid">
         <div id="footer-details" class="row">
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">About</h5>
                 <p class="inline-block">
-                    Full Stack Web Developer. Skilled in everything from HTML to Heroku. The capacity for structural and design thinking.
+                    Full Stack Web Developer. Skilled in everything from HTML to Heroku. The capacity for structural and
+                    design thinking.
                 </p>
             </div>
             <div class="col-sm-4">
@@ -209,4 +259,5 @@
         </div>
     </footer>
 </body>
+
 </html>
