--- a/github.html
+++ b/github.html
@@ -47,7 +47,7 @@
                                         aria-hidden="true"></i><span>GitHub</span></a>
                             </li>
                             <li class="col-3 ui-menu-color-download menuitem">
-                                <a href="assets/cv/sample-cv.pdf" target="_blank" class="hvr-sweep-to-bottom"><i
+                                <a href="assets/cv/CV (3).pdf" target="_blank" class="hvr-sweep-to-bottom"><i
                                         class="fa fa-download" aria-hidden="true"></i><span>Download CV</span></a>
                             </li>
                         </ul>
