--- a/index.html
+++ b/index.html
@@ -123,10 +123,12 @@
                                 <i class="three-reasons-icon fa fa-question" aria-hidden="true"></i>
                             </div>
                             <div class="col-10">
-                                <h4 class="three-reasons-heading uppercase">What do I do?</h4>
+                                <h4 class="three-reasons-heading uppercase">Who am i?</h4>
                                 <p>
-                                    I'm a skilled Full Stack Developer with a wealth of diverse life and technical
-                                    experience that I bring to every project.
+                                    I'm an ambitious Junior Full Stack Developer with a wealth of diverse professional
+                                    experience in various
+                                    industries, looking for an opportunity to apply my skills to create innovative
+                                    and dynamic software applications.
                                 </p>
                             </div>
                         </div>
@@ -137,11 +139,11 @@
                                 <i class="three-reasons-icon fa fa-thumbs-up" aria-hidden="true"></i>
                             </div>
                             <div class="col-10">
-                                <h4 class="three-reasons-heading uppercase">How do I do it?</h4>
+                                <h4 class="three-reasons-heading uppercase">What are my skills?</h4>
                                 <p>
-                                    I follow form as well as function. I know that the aesthetics of effective design
-                                    combined with application speed, security and reliability combine to create a great
-                                    user experience.
+                                    I am proficient in Front End and Back End Coding languages - HTML, CSS, JavaScript and Python. 
+                                    Experienced with coding frameworks and libraries - Bootstrap, JQuery, ReactJS and Django. Knowledge of API Integration, 
+                                    MySQL database management, AWS Amazon services, Stripe Payments and Liquid Shopify Templates. 
                                 </p>
                             </div>
                         </div>
@@ -154,9 +156,9 @@
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">Why hire me?</h4>
                                 <p>
-                                    I work quickly and effectively in getting things built and working across the stack.
-                                    I'm an excellent communicator who thrives in bright and enthusiastic teams and I'm
-                                    also a self starter when working solo.
+                                    I am passionate about developing high-quality web solutions that are intuitive and
+                                    user-friendly. Whether working independently or as part of a team, I am dedicated to producing
+                                    exceptional work that exceeds expectations.
                                 </p>
                             </div>
                         </div>
@@ -189,39 +191,9 @@
                 <h5 class="uppercase general-sub">Social</h5>
                 <ul class="list-inline social-links">
                     <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-facebook" aria-hidden="true"></i>
-                            <span class="sr-only">Facebook</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-twitter" aria-hidden="true"></i>
-                            <span class="sr-only">Twitter</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-linkedin" aria-hidden="true"></i>
-                            <span class="sr-only">LinkedIn</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-pinterest" aria-hidden="true"></i>
-                            <span class="sr-only">Pinterest</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-instagram" aria-hidden="true"></i>
-                            <span class="sr-only">Instagram</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-youtube" aria-hidden="true"></i>
-                            <span class="sr-only">YouTube</span>
+                        <a target="_blank" href="https://www.linkedin.com/in/a-linehan/">
+                            <i class="fab fa-linkedin" aria-hidden="true"></i>
+                            <span class="text-white">LinkedIn</span>
                         </a>
                     </li>
                 </ul>
