--- a/resume.html
+++ b/resume.html
@@ -42,7 +42,7 @@
                                         aria-hidden="true"></i><span>GitHub</span></a>
                             </li>
                             <li class="col-3 ui-menu-color-download menuitem">
-                                <a href="assets/cv/sample-cv.pdf" target="_blank" class="hvr-sweep-to-bottom"><i
+                                <a href="assets/cv/CV (3).pdf" target="_blank" class="hvr-sweep-to-bottom"><i
                                         class="fa fa-download" aria-hidden="true"></i><span>Download CV</span></a>
                             </li>
                         </ul>
@@ -68,8 +68,8 @@
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">Front End</h4>
                                 <p>
-                                    I'm skilled in User Experience Design using the trinity of HTML/CSS/Javascript. I
-                                    also have extensive experience in Front End Frameworks such as Angular and React
+                                    I am skilled in UX Design using HTML, CSS and JavaScript. I
+                                    also have experience in Front End Frameworks and Libraries such as Bootstrap and ReactJS.
                                 </p>
                             </div>
                         </div>
@@ -82,8 +82,8 @@
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">Back End</h4>
                                 <p>
-                                    I specialize in data-driven web applications. Many of my projects utilise
-                                    document-based data. I use Python and Django in conjunction with MongoDB to process
+                                    I am familiar with data-driven web applications. A number of my projects utilise
+                                    document-based data. I use Python and Django in conjunction with ElephantSQL to process
                                     and present information.
                                 </p>
                             </div>
@@ -103,7 +103,7 @@
                     <div class="timeline-item" data-dates="03/2021 - Current">
                         <h3>Kahn Design - Bradford</h3>
                         <h4>Product Manager</h4>
-                        <p>My current role at Kahn Design has provided me an excellent opportunity to develop my
+                        <p>My role at Kahn Design has provided me an excellent opportunity to develop my
                             experience maintaining an E-Commerce website through the Shopify platform, as well as
                             further my knowledge in product development and deployment.
                             Key Responsibilities:</p>
