--- a/github.html
+++ b/github.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css"
         type="text/css" />
     <link rel="stylesheet" href="assets/css/style.css">
-    
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript" src="assets/js/github-information.js"></script>
     <title>Andrew Linehan - CV</title>
@@ -22,7 +22,7 @@
     <header>
         <div class="row no-gutters">
             <a href="index.html" class="col-md-4 logo">
-                
+
             </a>
             <div class="col-md-8">
                 <div class="row no-gutters bg-color-name-title">
@@ -59,27 +59,90 @@
     </header>
     <section class="container-fluid">
         <div class="row bg-color-github">
-            <div class="col">
-                <h3 class="contact-heading uppercase text-center">View My GitHub Projects</h3>
-                <h5 class="uppercase text-center">You can also search on other user profiles</h5>
-
-                <div class="center-form">
-                    <input type="text" id="gh-username" value="andyl86" oninput="fetchGitHubInformation()" />
-                    <div id="gh-user-data"></div>
-                    <div id="gh-repo-data"></div>
-
+            <div class="col-md-4 section-column text-white">
+                <div class="row">
+                    <div class="col">
+                        <h3 class="contact-heading uppercase text-center">View My GitHub Projects</h3>
+                        <h5 class="uppercase text-center">You can also search on other user profiles</h5>
+                    </div>
                 </div>
-
+                <div class="row">
+                    <div class="col-12">
+                        <div class="row">
+                            <div class="col-10">
+                                <div class="center-form">
+                                    <input type="text" id="gh-username" value="andyl86"
+                                        oninput="fetchGitHubInformation()" />
+                                    <div id="gh-user-data"></div>
+                                    <div id="gh-repo-data"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>
-
+            <div class="col-md-8 bg-color-three-reasons section-column">
+                <div class="row">
+                    <div class="col-12">
+                        <h3 class="history-heading uppercase">
+                            Portfolio
+                        </h3>
+                    </div>
+                    <div>
+                        <div class="card" style="width: auto;">
+                            <div class="card-body">
+                              <h5 class="card-title">Project 5 – E-Commerce Specialism</h5>
+                              <h6 class="card-subtitle mb-2 text-muted">Languages and Technologies – HTML, CSS, JavaScript, NodeJS, Bootstrap, Django, Stripe, AWS</h6>
+                              <a href="https://throwback-developments.herokuapp.com/" class="card-link" target="_blank">Project link</a>
+                            </div>
+                          </div>
+                        <br>
+                        <div class="card" style="width: auto;">
+                            <div class="card-body">
+                              <h5 class="card-title">Project 4 – Full Stack toolkit Blog Site</h5>
+                              <h6 class="card-subtitle mb-2 text-muted">Languages and Technologies – HTML, CSS, JavaScript, NodeJS, Bootstrap, Django, ElephantSQL</h6>
+                              <a href="https://gt-modellista.herokuapp.com/" class="card-link" target="_blank">Project link</a>
+                            </div>
+                          </div>
+                        <br>
+                        <div class="card" style="width: auto;">
+                            <div class="card-body">
+                              <h5 class="card-title">Project 3 – Terminal Hangman Game</h5>
+                              <h6 class="card-subtitle mb-2 text-muted">Languages and Technologies – Python</h6>
+                              <a href="https://hangman-86.herokuapp.com/" class="card-link" target="_blank">Project link</a>
+                            </div>
+                          </div>
+                        <br>
+                        <div class="card" style="width: auto;">
+                            <div class="card-body">
+                              <h5 class="card-title">Project 2 – Rock, Paper, Scissors Game</h5>
+                              <h6 class="card-subtitle mb-2 text-muted">Languages and Technologies – HTML, CSS and JavaScript</h6>
+                              <a href="https://andyl86.github.io/Portfolio2/" class="card-link" target="_blank">Project link</a>
+                            </div>
+                          </div>
+                        <br>
+                        <div class="card" style="width: auto;">
+                            <div class="card-body">
+                              <h5 class="card-title">Project 1 – Single Page Site</h5>
+                              <h6 class="card-subtitle mb-2 text-muted">Languages and Technologies – HTML and CSS</h6>
+                              <a href="https://andyl86.github.io/Portfolio1/" class="card-link" target="_blank">Project link</a>
+                            </div>
+                          </div>
+                        <br>
+                        <h2></h2>
+                        <h4></h4>
+                    </div>
+                </div>
+            </div>
+        </div>   
     </section>
     <footer class="container-fluid">
         <div id="footer-details" class="row">
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">About</h5>
                 <p class="inline-block">
-                    Full Stack Web Developer. Skilled in everything from HTML to Heroku. The capacity for structural and design thinking.
+                    Full Stack Web Developer. Skilled in everything from HTML to Heroku. The capacity for structural and
+                    design thinking.
                 </p>
             </div>
             <div class="col-sm-4">
@@ -96,39 +159,9 @@
                 <h5 class="uppercase general-sub">Social</h5>
                 <ul class="list-inline social-links">
                     <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-facebook" aria-hidden="true"></i>
-                            <span class="sr-only">Facebook</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-twitter" aria-hidden="true"></i>
-                            <span class="sr-only">Twitter</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-linkedin" aria-hidden="true"></i>
-                            <span class="sr-only">LinkedIn</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-pinterest" aria-hidden="true"></i>
-                            <span class="sr-only">Pinterest</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-instagram" aria-hidden="true"></i>
-                            <span class="sr-only">Instagram</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-youtube" aria-hidden="true"></i>
-                            <span class="sr-only">YouTube</span>
+                        <a target="_blank" href="https://www.linkedin.com/in/a-linehan/">
+                            <i class="fab fa-linkedin" aria-hidden="true"></i>
+                            <span class="text-white">LinkedIn</span>
                         </a>
                     </li>
                 </ul>
